# adfc

./: LICENSE.txt  README.md  pyproject.toml
src/adfc/: __about__.py  main.py
src/adfc/addUtil/: addMain.py
src/adfc/vcs/: README.md
