[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adfc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "U.N. Owen", email = "gem920se@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mudassir-cpp/adfc#readme"
Issues = "https://github.com/mudassir-cpp/adfc/issues"
Source = "https://github.com/mudassir-cpp/adfc"

[project.scripts]
adfc="adfc.main:main"  # for running scripts from the CLi main.py should contan main() function


[tool.hatch.version]
path = "src/adfc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/adfc tests}"

[tool.coverage.run]
source_pkgs = ["adfc", "tests"]
branch = true
parallel = true
omit = [
  "src/adfc/__about__.py",
]

[tool.coverage.paths]
adfc = ["src/adfc", "*/adfc/src/adfc"]
tests = ["tests", "*/adfc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
